--- a/app/src/main/res/layout/activity_bluetooth_demo.xml
+++ b/app/src/main/res/layout/activity_bluetooth_demo.xml
@@ -7,7 +7,8 @@
     <TextView
         android:id="@+id/newB"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="40dp"
+        android:gravity="center"
+        />
 
 </LinearLayout>
